Accept array of events instead of only one
